rancher-demo/rancher-demo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world

spec:
  ports:
    - name: web
      port: 8080
      targetPort: web

  selector:
    app: hello-world
