rancher-demo/rancher-demo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: demo.starsys.fr
  name: ingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - example.example.com
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 8080
      host: demo.starsys.fr
